--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.5.0",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "~16.8.0",
     "react-router-dom": "5.0.0",
     "redbox-react": "1.6.0"
