--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "~16.8.0",
     "react-bootstrap": "^1.2.2",
     "react-dom": "~16.8.0",
+    "react-player": "^2.6.0",
     "react-router-dom": "^5.2.0",
     "redbox-react": "1.6.0"
   },
