--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rails/webpacker": "3.5",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
     "react-bootstrap": "^1.2.2",
